filtering by categories

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -30,6 +30,7 @@ es:
       title: 'Añadir producto'
     index:
       title: 'Productos:'
+      all: 'Todos'
     show:
       edit: 'Editar producto'
       delete: 'Borrar producto'
