--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,6 +31,7 @@ products:
     title: 'Add product'
   index:
     title: 'Products:'
+    all: 'All'
   show:
     edit: 'Edit product'
     delete: 'Delete product'
