--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -29,6 +29,10 @@ es:
     users:
       create:
         created: 'Tu cuenta se ha creado!'
+    sessions:
+      create:
+        created: 'Bienvenido!'
+        failed: 'Login inválido!'
   products:
     edit:
       title: 'Editar producto'
