--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,24 +2,22 @@ en:
   app_name: 'SellIT'
   meta_title: 'Buy and sell second hand products!'
   activerecord:
-  models:
-    product: Product
-  attributes:
-    product:
-      title: 'Title'
-      description: 'Description'
-      price: 'Price'
-      photo: 'Photo'
-  errors:
     models:
+      product: Product
+      user: User
+      category: Category
+    attributes:
       product:
-        attributes:
-          title:
-            blank: "can't be blank"
-          description:
-            blank: "can't be blank"
-          price:
-            blank: "can't be blank"
+        title: 'Title'
+        description: 'Description'
+        price: 'Price'
+        photo: 'Photo'
+      user:
+        email: 'Email'
+        username: 'Username'
+        password: 'Password'
+      category:
+        name: 'Name'
   common:
     confirm: 'Are you sure?'
     back: 'Go back'
@@ -27,6 +25,9 @@ en:
   shared:
     header:
       add: 'Add product'
+      login: 'Login'
+      register: 'Register'
+      logout: 'Logout'
   authentication:
     users:
       create:
@@ -35,6 +36,8 @@ en:
       create:
         created: 'Welcome!'
         failed: 'Invalid login!'
+      destroy:
+        destroyed: 'Session ended. Bye!'
   products:
     edit:
       title: 'Edit product'
