🛠️ favorites_controller.rb -> Added destroy method 🟢 favoritable.rb -> New file for favoriting functionality 🛠️ product.rb -> Included Favoritable module 🛠️ show.html.erb -> Updated favorite/unfavorite links 🛠️ routes.rb -> Added destroy action for favorites 🛠️ favorites_controller_test.rb -> Added unfavorite test

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -46,6 +46,12 @@ es:
       title: 'Editar producto'
     new:
       title: 'Añadir producto'
+    form:
+      title_placeholder: '¿Qué quieres vender?'
+      description_placeholder: '¿Puedes describir el producto?'
+      price_placeholder: '¿Cuánto cuesta?'
+      category_placeholder: '¿En qué categoría encaja mejor?'
+      submit: 'Véndelo!'
     index:
       title: 'Productos:'
       all: 'Todos'
