--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -25,7 +25,7 @@ en:
     not_authorized: 'You are not authorized for this action'
     not_found: 'Not found!'
   shared:
-    header:
+    items:
       add: 'Add product'
       login: 'Login'
       register: 'Register'
@@ -91,3 +91,7 @@ en:
   favorites:
     index:
       title: 'My favorites'
+  user_mailer:
+    welcome: 
+      subject: 'Welcome to SellIT!'
+      welcome_message: 'Hey %{username}!, welcome to SellIT. We hope you sell a lot!'
